chore: changing /users/rooms to /user/rooms
